# hydroBurn

./: .gitignore  IMPLEMENTATION.md  README.md  SPECS.md  pyproject.toml  requirements.txt
hydroburn/: __init__.py  cli.py  config.py
hydroburn/analysis/: __init__.py  events.py  fdc.py  flood_freq.py  statistics.py
hydroburn/io/: __init__.py  load_catchment.py  load_fire.py  load_precip.py  load_streamflow.py
hydroburn/preprocess/: __init__.py  baseflow.py  qc.py  units.py
hydroburn/report/: __init__.py  generate.py
hydroburn/visualization/: __init__.py  annual_max.py  baseflow_plot.py  boxplots.py  fdc_plot.py  flood_freq_plot.py  hydrograph.py  map_catchment.py  style.py
tests/: __init__.py  test_analysis.py  test_config.py  test_io.py  test_preprocess.py  test_visualization.py
